--- a/index.html
+++ b/index.html
@@ -981,7 +981,7 @@
 			<div class="nav-wrapper">
 				<ul id="menu">
 					<li>
-						<a href="#cover" class="option">
+						<a href="#song-0" class="option">
 							<img src="./dist/img/loading.png" alt="iso">
 							Inicio
 						</a>
@@ -1065,7 +1065,7 @@
 						</a>
 					</li>
 					<li class="credits-link">
-						<a href="#credits" class="option">
+						<a href="#song-14" class="option">
 							<img src="./dist/img/loading.png" alt="iso">
 							Credits
 						</a>
