--- a/index.html
+++ b/index.html
@@ -1075,15 +1075,16 @@
 		</nav>
 
 
-  	<!-- JS Inlcudes -->
-  	<span id="blocked-scroll" data-blocked="0"></span>
-  <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-  <script src="./dist/js/modernizr.custom.js"></script>
+   <span id="blocked-scroll" data-blocked="0"></span>
+   <!-- JS Inlcudes -->
+
+   <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.9.1/underscore.js"></script>
+   <script src="./dist/js/modernizr.custom.js"></script>
 		<script src="./dist/js/easings.min.js"></script>
 		<script src="./dist/js/classie.js"></script>
 		<script src="./dist/js/aos.js"></script>
 		<script src="./dist/js/full-page-scroll.min.js"></script>
-		<script src="./dist/js/scroll-lock.min.js"></script>
 		<script src="./dist/js/main.js"></script>
   </body>
 </html>
